<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:id="@+id/app_name"
    android:background="#ffffffff"
    style="@style/Widget.AppCompat.Toolbar.Button.Navigation">


    <TextView
        android:id="@+id/player1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player1"
        android:layout_alignBottom="@+id/resetButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="20dp"
        android:textIsSelectable="false"
        style="@style/Widget.AppCompat.Toolbar.Button.Navigation"
        android:theme="@style/btnStyleHaiti"
        android:textColor="#ff000000" />

    <EditText
        android:id="@+id/player1Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="2"
        android:layout_below="@+id/player1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:editable="false"
        android:text="@string/life_counter_twenty"
        android:textSize="25dp"
        android:theme="@style/btnStyleHaiti"
        android:singleLine="true">
<!--
        <requestFocus />-->
    </EditText>


    <Button
        android:id="@+id/sub5p1Button"
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:text="@string/sub5"
        android:background="@drawable/custom_btn_haiti"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/sub1p1Button"
        android:layout_alignStart="@+id/sub1p1Button"
        android:textColor="#ffffffff" />



    <Button
        android:id="@+id/add5p1Button"
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:text="@string/add5"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/custom_btn_haiti"
        android:textColor="#ffffffff" />

    <Button
        android:id="@+id/add1P1Button"
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:text="@string/addone"
        android:background="@drawable/custom_btn_haiti"
        android:layout_above="@+id/sub5p1Button"
        android:layout_toLeftOf="@+id/sub1p1Button"
        android:layout_toStartOf="@+id/sub1p1Button"
        android:textColor="#ffffffff" />

    <Button
        android:id="@+id/sub1p1Button"
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:text="@string/sub1"
        android:background="@drawable/custom_btn_haiti"
        android:layout_alignTop="@+id/add1P1Button"
        android:layout_toRightOf="@+id/add5p1Button"
        android:layout_toEndOf="@+id/add5p1Button"
        android:textColor="#ffffffff" />

    <Button
        android:id="@+id/add1p2Button"
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:text="@string/addone"
        android:background="@drawable/custom_btn_haiti"
        android:layout_alignTop="@+id/sub1p2Button"
        android:layout_alignLeft="@+id/add5p2Button"
        android:layout_alignStart="@+id/add5p2Button"
        android:textColor="#ffffffff" />

    <Button
        android:id="@+id/add5p2Button"
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:text="@string/add5"
        android:layout_below="@+id/add1p2Button"
        android:layout_toLeftOf="@+id/sub1p2Button"
        android:background="@drawable/custom_btn_haiti"
        android:textColor="#ffffffff" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player2"
        android:layout_alignTop="@+id/player1"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textSize="20dp"
        android:textIsSelectable="false"
        style="@style/Widget.AppCompat.Toolbar.Button.Navigation"
        android:theme="@style/btnStyleHaiti"
        android:textColor="#ff000000" />

    <EditText
        android:id="@+id/player2Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="2"
        android:layout_below="@+id/textView2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:editable="false"
        android:text="@string/life_counter_twenty"
        android:textSize="25dp"
        android:theme="@style/btnStyleHaiti"
        android:singleLine="true" />

    <Button android:id="@+id/resetButton"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:text="@string/reset"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/custom_btn_haiti"
        android:textColor="#ffffffff" />

    <Button
        android:id="@+id/sub1p2Button"
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:text="@string/sub1"
        android:background="@drawable/custom_btn_haiti"
        android:layout_above="@+id/sub5p2Button"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="#ffffffff" />

    <Button
        android:id="@+id/sub5p2Button"
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:text="@string/sub5"
        android:layout_alignTop="@+id/sub5p1Button"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/custom_btn_haiti"
        android:textColor="#ffffffff" />


</RelativeLayout>
